--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ beautifulsoup4==4.8.2
 certifi==2019.11.28
 chardet==3.0.4
 defusedxml==0.6.0
+dj-database-url==0.5.0
 Django==3.0.2
 django-allauth==0.41.0
 django-bootstrap4==1.1.1
@@ -17,6 +18,7 @@ idna==2.8
 Markdown==3.1.1
 oauthlib==3.1.0
 Pillow==7.0.0
+psycopg2-binary==2.8.4
 pycodestyle==2.5.0
 python-decouple==3.3
 python-dotenv==0.10.5
